codegen/ui_tests/module_cfg_const.stderr
error: cfg attributes not allowed on this item
  --> ui_tests/module_cfg_const.rs:13:5
   |
13 |     #[cfg(feature = "foo")]
   |     ^

error[E0433]: failed to resolve: use of undeclared crate or module `test_module`
  --> ui_tests/module_cfg_const.rs:26:8
   |
26 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of undeclared crate or module `test_module`
